header image distortion fixed

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,6 @@ h2 {
   margin: 20px;
   padding: 5px 10px;
   background-color: rgba(255, 255, 255, 0.7);
-  border: 1px solid #998200;
   display: inline-block; }
   @media (min-width: 820px) {
     h2 {
@@ -194,14 +193,15 @@ header {
     margin: 40px auto;
     z-index: 1000;
     color: #998200;
-    border-top: 3px solid #998200;
-    border-bottom: 3px solid #998200;
+    border-top: 2px solid #998200;
+    border-bottom: 2px solid #998200;
     font-size: 2rem;
     font-weight: bold;
     background-color: rgba(255, 255, 255, 0.7);
     width: 100%; }
     @media (min-width: 820px) {
       header h1 {
+        padding: 5px;
         width: 100%;
         position: relative;
         top: 200px;
@@ -257,11 +257,10 @@ nav {
           background-color: #998200;
           border: solid 2px white; } }
   nav span {
-    color: #998200;
+    color: white;
     text-transform: uppercase;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 10px;
-    border: 1px solid #998200;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
     padding: 10px;
     margin: 10px; }
     @media (min-width: 820px) {
@@ -300,15 +299,15 @@ nav {
       height: calc(600px * 1.2); } }
   .image-container div.img1 {
     width: 50%;
-    max-width: calc(1450px * 0.5);
-    flex: 1; }
+    max-width: calc(1450px * 0.5); }
   .image-container div.img2 {
     width: 50%;
-    max-width: calc(1450px * 0.5);
-    flex: 1; }
+    max-width: calc(1450px * 0.5); }
   .image-container img {
     width: 100%;
-    height: 100%; }
+    position: absolute;
+    bottom: 0;
+    left: 0; }
 
 #projects {
   background-image: url("../images/section-images/Back.png");
@@ -327,6 +326,12 @@ nav {
     @media (min-width: 820px) {
       #projects h3 {
         font-size: 1rem; } }
+    #projects h3 a {
+      color: white;
+      font-size: 1rem; }
+      @media (min-width: 820px) {
+        #projects h3 a {
+          font-size: 1.3rem; } }
   #projects .grid {
     display: grid;
     grid-template-columns: 1fr;
