--- a/scss/base/_elements.scss
+++ b/scss/base/_elements.scss
@@ -20,7 +20,6 @@ h2 {
     margin: 20px;
     padding: 5px 10px;
     background-color: rgba(255, 255, 255, 0.7);
-    border: 1px solid $primary-color;
     display: inline-block;
     @include mq('small') {
         font-size: 2.5rem;
