--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -16,13 +16,14 @@ header {
         margin: 40px auto;
         z-index: 1000;
         color: $primary-color;
-        border-top: 3px solid $primary-color;
-        border-bottom: 3px solid $primary-color;
+        border-top: 2px solid $primary-color;
+        border-bottom: 2px solid $primary-color;
         font-size: 2rem;
         font-weight: bold;
         background-color: rgba(255, 255, 255, 0.7);
                     width: 100%;
         @include mq('small') {
+            padding: 5px;
             width: 100%;
             position: relative;
             top: 200px;
@@ -88,11 +89,10 @@ nav {
         }
     }
     span {
-        color: $primary-color;
+        color: white;
         text-transform: uppercase;
-        background-color: rgba(255, 255, 255, 0.7);
-        border-radius: 10px;
-        border: 1px solid $primary-color;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
         padding: 10px;
         margin: 10px;
         @include mq('small') {
@@ -138,26 +138,18 @@ nav {
     }
     div.img {
         &1 {
-            // background-image: url('../images/section-images/IMG_E3909_1.png');
-            // background-repeat: no-repeat;
-            // background-size: contain;
-            // background-position: center;
             width: 50%;
             max-width: calc(#{$body-max-width} * 0.5);
-            flex: 1;
         }
         &2 {
-            // background-image: url('../images/section-images/IMG_3907_1.png');
-            // background-repeat: no-repeat;
-            // background-size: contain;
-            // background-position: center;
             width: 50%;
             max-width: calc(#{$body-max-width} * 0.5);
-            flex: 1;
         }
     }
     img {
         width: 100%;
-        height: 100%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
     }
 }
